--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@medusajs/admin-sdk": "2.11.1",
     "@medusajs/cli": "2.11.1",
     "@medusajs/framework": "2.11.1",
-    "@medusajs/medusa": "2.11.1"
+    "@medusajs/medusa": "2.11.1",
+    "@medusajs/workflows-sdk": "^2.11.1"
   },
   "devDependencies": {
     "@medusajs/test-utils": "2.11.1",
