--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   ],
   "scripts": {
     "build": "medusa build",
+    "migrate": "medusa db:migrate && medusa db:sync-links",
+    "migrate:rebuild": "medusa db:rollback && medusa db:migrate && medusa db:sync-links",
     "seed": "medusa exec ./src/scripts/seed.ts",
     "start": "medusa start",
+    "start:prod": "pnpm run migrate && medusa start",
     "dev": "medusa develop",
     "test:integration:http": "TEST_TYPE=integration:http NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
     "test:integration:modules": "TEST_TYPE=integration:modules NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
