--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@medusajs/admin-sdk": "2.11.1",
     "@medusajs/cli": "2.11.1",
+    "@medusajs/dashboard": "^2.11.1",
     "@medusajs/framework": "2.11.1",
     "@medusajs/medusa": "2.11.1",
     "@medusajs/workflows-sdk": "^2.11.1"
