--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "medusa"
   ],
   "scripts": {
-    "build": "medusa build",
+    "build": "NODE_ENV=development medusa build",
     "migrate": "medusa db:migrate && medusa db:sync-links",
     "migrate:rebuild": "medusa db:rollback && medusa db:migrate && medusa db:sync-links",
     "seed": "medusa exec ./src/scripts/seed.ts",
     "start": "medusa start",
-    "start:prod": "pnpm run migrate && medusa start",
+    "start:prod": "pnpm run migrate && NODE_ENV=production medusa start",
     "dev": "medusa develop",
     "test:integration:http": "TEST_TYPE=integration:http NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
     "test:integration:modules": "TEST_TYPE=integration:modules NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
