chore: use cross-env for cross-platform NODE_ENV

--- a/package.json
+++ b/package.json
@@ -14,24 +14,27 @@
     "medusa"
   ],
   "scripts": {
-    "build": "NODE_ENV=development medusa build",
-    "migrate": "medusa db:migrate && medusa db:sync-links",
-    "migrate:rebuild": "medusa db:rollback && medusa db:migrate && medusa db:sync-links",
-    "seed": "medusa exec ./src/scripts/seed.ts",
-    "start": "medusa start",
-    "start:prod": "pnpm run migrate && NODE_ENV=production medusa start",
-    "dev": "medusa develop",
-    "test:integration:http": "TEST_TYPE=integration:http NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
-    "test:integration:modules": "TEST_TYPE=integration:modules NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
-    "test:unit": "TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit"
+  "build": "cross-env NODE_ENV=development medusa build",
+  "migrate": "medusa db:migrate && medusa db:sync-links",
+  "migrate:rebuild": "medusa db:rollback && medusa db:migrate && medusa db:sync-links",
+  "seed": "medusa exec ./src/scripts/seed.ts",
+  "dev": "medusa develop",
+  "start": "medusa start",
+  "start:prod": "pnpm run migrate && cross-env NODE_ENV=production medusa start",
+  "test:integration:http": "TEST_TYPE=integration:http NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
+  "test:integration:modules": "TEST_TYPE=integration:modules NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
+  "test:unit": "TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit"
   },
   "dependencies": {
     "@medusajs/admin-sdk": "2.11.1",
+    "@medusajs/admin-shared": "2.11.1",
     "@medusajs/cli": "2.11.1",
     "@medusajs/dashboard": "^2.11.1",
     "@medusajs/draft-order": "2.10.3",
     "@medusajs/framework": "2.11.1",
+    "@medusajs/icons": "2.11.1",
     "@medusajs/medusa": "2.11.1",
+    "@medusajs/ui": "4.0.25",
     "@medusajs/utils": "2.11.1",
     "@medusajs/workflows-sdk": "^2.11.1"
   },
@@ -43,6 +46,7 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.2.25",
+    "cross-env": "^10.1.0",
     "jest": "^29.7.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
