--- a/package.json
+++ b/package.json
@@ -14,23 +14,25 @@
     "medusa"
   ],
   "scripts": {
-  "build": "cross-env NODE_ENV=development medusa build",
-  "migrate": "medusa db:migrate && medusa db:sync-links",
-  "migrate:rebuild": "medusa db:rollback && medusa db:migrate && medusa db:sync-links",
-  "seed": "medusa exec ./src/scripts/seed.ts",
-  "dev": "medusa develop",
-  "start": "medusa start",
-  "start:prod": "pnpm run migrate && cross-env NODE_ENV=production medusa start",
-  "test:integration:http": "TEST_TYPE=integration:http NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
-  "test:integration:modules": "TEST_TYPE=integration:modules NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
-  "test:unit": "TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit"
+    "build": "cross-env NODE_ENV=development medusa build",
+    "migrate": "medusa db:migrate && medusa db:sync-links",
+    "migrate:rebuild": "medusa db:rollback && medusa db:migrate && medusa db:sync-links",
+    "seed": "medusa exec ./src/scripts/seed.ts",
+    "dev": "medusa develop",
+    "start": "medusa start",
+    "start:prod": "pnpm run migrate && cross-env NODE_ENV=development medusa build && cross-env NODE_ENV=production medusa start",
+    "test:integration:http": "TEST_TYPE=integration:http NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
+    "test:integration:modules": "TEST_TYPE=integration:modules NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
+    "test:unit": "TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit"
   },
   "dependencies": {
     "@medusajs/admin-sdk": "2.11.1",
     "@medusajs/admin-shared": "2.11.1",
+    "@medusajs/cache-redis": "^2.11.1",
     "@medusajs/cli": "2.11.1",
     "@medusajs/dashboard": "^2.11.1",
     "@medusajs/draft-order": "2.10.3",
+    "@medusajs/event-bus-redis": "^2.11.1",
     "@medusajs/framework": "2.11.1",
     "@medusajs/icons": "2.11.1",
     "@medusajs/medusa": "2.11.1",
